solo/2-sole-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: solo
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        imagePullPolicy: IfNotPresent
        name: mysql-pod
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"          
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3306
          name: msyql-listin
        volumeMounts:
        - name: mysql-data  
          mountPath: /var/lib/mysql
          subPath: mysql-data
        - name: mysql-conf
          mountPath: /etc/mysql/conf.d/my.cnf
          subPath: my.cnf
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: solo-claim-mysql
        - name: mysql-conf
          configMap:
            name: mysql-conf
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: solo
  labels:
    app: mysql
spec:
  ports:
  - targetPort: 3306
    port: 3306
    nodePort: 30306
  type: NodePort
  selector:
     app: mysql
