solo/3-sole-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solo
  namespace: solo
spec:
  selector:
    matchLabels:
      app: solo
  replicas: 3
  template:
    metadata:
      labels:
        app: solo
    spec:
      containers:
      - image: docker.io/b3log/solo:latest
        imagePullPolicy: IfNotPresent
        name: solo-pod
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: solo-listin
        volumeMounts:
        - name: solo-conf
          mountPath: /opt/solo/local.properties
          subPath: local.properties 
      volumes:
      - name: solo-conf
        configMap:
          name: solo-conf
---

apiVersion: v1
kind: Service
metadata:
  name: solo-service
  namespace: solo
  labels:
    app: solo
spec:
  ports:
  - targetPort: 8080
    port: 8080
    nodePort: 41001
  type: NodePort
  selector:
     app: solo
